# SW_Tech

./: .env.example  .gitignore  README.md  app.py  pyproject.toml  requirements.txt
.streamlit/: config.toml
backend/: main.py
backend/core/: config.py  logging.py  security.py
backend/models/: chat.py  execution.py  file.py
backend/services/: chat_history_service.py  excel_service.py  file_service.py  result_service.py  (+1 more)
benchmarks/: EVALUATION.md  README.md  _app_loader.py  cases.json  dsr_metrics.py  human_review_template.csv  metrics.py  run_comparison.py  score_saved_chats.py
config/: chat_step_links.json  flow_templates.json  personas.json  settings.yaml
docker/: .dockerignore  Dockerfile.backend  Dockerfile.frontend  docker-compose.prod.yml  docker-compose.yml
docs/: SW_Technology_System_Operation.md
excel/: 4예실대비표.xlsx  5예실대비표.xlsx  7예실대비표.xlsx
frontend/: app.py
requirements/: backend.txt  base.txt  dev.txt  frontend.txt
scripts/: benchmark_persona.py  git_commit_and_push.ps1  push_chat_ui.ps1  run_studio.sh  start.sh  start_dev.sh
services/: chat_catalog.py  conversation_store.py  korean_matplotlib.py  ollama_trace.py  persona_prompt.py  persona_service.py  persona_store.py  prompt_enhancer.py  prompt_rewriter.py  step_flow_engine.py  system_diagnostics.py
src/: __init__.py  excel_actions.py  excel_analyzer.py  model_router.py  persona_manager.py  persona_pipeline.py  persona_router.py  prompt_builder.py  tool_registry.py
tests/: conftest.py
ui/: __init__.py  dashboard.py  execution_trace.py  persona_ui.py  saved_chats.py  step_flow.py
(+31 files in other folders)
